--- a/index.html
+++ b/index.html
@@ -56,10 +56,10 @@
       <section id="skills">
         <div class="skills__container">
           <h1>Skills</h1>
-          <img class="skills__Image" src="/images/skills.png" alt="Skills" />
+          <img class="skills__Image" src="images/skills.png" alt="Skills" />
          
-          <img class="skills__Image" src="/images/react.png" alt="React" />
-          <img class="skills__Image" src="/images/github.jfif" alt="GitHub" />
+          <img class="skills__Image" src="images/react.png" alt="React" />
+          <img class="skills__Image" src="images/github.jfif" alt="GitHub" />
         </div>
       </section>
 
