--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="styles.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Inconsolata:wght@200..900&family=Quicksand:wght@300..700&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Inconsolata:wght@200..900&family=Quicksand:wght@300..700&display=swap" rel="stylesheet"
   </head>
   <body>
     <nav>
@@ -56,10 +56,10 @@
       <section id="skills">
         <div class="skills__container">
           <h1>Skills</h1>
-          <img class="skills__Image" src="images/skills.png" alt="Skills" />
+          <img class="skills__Image" src="skills.png" alt="Skills" />
          
-          <img class="skills__Image" src="images/react.png" alt="React" />
-          <img class="skills__Image" src="images/github.jfif" alt="GitHub" />
+          <img class="skills__Image" src="react.png" alt="React" />
+          <img class="skills__Image" src="github.jfif" alt="GitHub" />
         </div>
       </section>
 
